config-root/namespaces/jx-production/node-http/node-http-node-http-deploy.yaml
# Source: node-http/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-http-node-http
  labels:
    draft: draft-app
    chart: "node-http-1.0.0"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-production
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: node-http-node-http
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: node-http-node-http
    spec:
      containers:
        - name: node-http
          image: "gcr.io/neokube/node-http:1.0.0"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
